data/derived/fa15/progs/unify/prog2997.ml.out
Characters 89-90:
  List.fold_left f base fs;;
                 ^
Error: This expression has type int -> int -> 'a -> int
       but an expression was expected of type int -> int -> int
       Type 'a -> int is not compatible with type int 
